# fakelish-rs

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs  word-probability.json
tests/: generates_words_test.rs
